Prevent browser from saving history when switching between sections and make horizontal scrolling noncontinuous

--- a/css/index.css
+++ b/css/index.css
@@ -65,10 +65,6 @@ iframe {
   position: relative;
 }
 
-#introduction h1 {
-  font-size: 9vw;
-}
-
 @media (min-width: 640px) {
   h1 {
     font-size: 50px;
@@ -89,5 +85,15 @@ iframe {
 
   .fp-controlArrow.fp-next {
     border-width: 38.5px 0 38.5px 34px;
+  }
+
+  #introduction h1 {
+    font-size: 60px;
+  }
+}
+
+@media (min-width: 1025px) {
+  #introduction h1 {
+    font-size: 100px;
   }
 }
